# mycmake

./: .gitignore  CMakeLists.txt  README.md  gitignore  main.cpp  swap.cpp  swap.h
readme/: V1.0.3_多目录构建和生成链接库.md  V1.0.4_CMake使用第三方动态链接库.md  V1.0.4_CMake使用第三方库.md  V1.0.5_CMake使用第三方静态链接库.md
src/src/: swap.cpp
